@@ -2,5 +2,6 @@
 compile_test
 compile_test_bundle
 named_values_test
+parse_value_test
 url_detector_test
 *.exe
