@@ -1,6 +1,6 @@
 include Makefile.builtem
 
-TARGETS = compile_test compile_test_bundle named_values_test url_detector_test
+TARGETS = compile_test compile_test_bundle named_values_test parse_value_test url_detector_test
 
 C_FLAGS += $(call include_dir,../src)
 
@@ -16,6 +16,9 @@ $(call exe,compile_test_bundle): $(call obj,compile_test_bundle)
 	$(call link_exe,$@,$^,$(call win_subsystem,console))
 
 $(call exe,named_values_test): $(call obj,named_values_test)
+	$(call link_exe,$@,$^,$(call win_subsystem,console))
+
+$(call exe,parse_value_test): $(call obj,parse_value_test)
 	$(call link_exe,$@,$^,$(call win_subsystem,console))
 
 $(call exe,url_detector_test): $(call obj,url_detector_test ../src/url_detector)
