@@ -1,5 +1,7 @@
 Version 3.1.1-devel
 -------------------
+- Support leading + in parse_int and parse_double
+- Support exponent in parse_double
 
 
 Version 3.1.0 [29 Mar 2017]
